--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.jar=${dist.dir}/SmokeTrail.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.spigot-1.7.2-R0.3-SNAPSHOT.jar=C:\\Users\\Taz\\Documents\\NetBeansProjects\\Test Server\\spigot-1.7.2-R0.3-SNAPSHOT.jar
+file.reference.craftbukkit-1.7.9-R0.2.jar=C:\\Users\\Taz\\Documents\\NetBeansProjects\\Test Server\\craftbukkit-1.7.9-R0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.spigot-1.7.2-R0.3-SNAPSHOT.jar}
+    ${file.reference.craftbukkit-1.7.9-R0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
