--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.craftbukkit-1.7.9-R0.2.jar=C:\\Users\\Taz\\Documents\\NetBeansProjects\\Test Server\\craftbukkit-1.7.9-R0.2.jar
+file.reference.craftbukkit.jar=C:\\Users\\Taz\\Documents\\NetBeansProjects\\Test Server\\craftbukkit.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.craftbukkit-1.7.9-R0.2.jar}
+    ${file.reference.craftbukkit-1.7.9-R0.2.jar}:\
+    ${file.reference.craftbukkit.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
